--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <script src="sketch.js"></script>
     <script src="App.js"></script>
+    <script src="Archivos.js"></script>
 
   </body>
 </html>
